@@ -53,7 +53,7 @@
 
                 <div class="ui-grid-a">
                     <div data-locale-id="home_about_version" class="ui-block-a" style="width:27%">version</div>
-                    <div class="ui-block-b" style="width:73%">&nbsp;&nbsp;1.00 beta r450</div>
+                    <div class="ui-block-b" style="width:73%">&nbsp;&nbsp;1.00 beta r451</div>
                 </div>
 
                 <div class="ui-grid-a">
