@@ -170,6 +170,8 @@ namespace HomeGenie.Service.Handlers
                         string bundleFolder = Path.Combine("programs", "arduino", newPid.ToString());
                         if (Directory.Exists(bundleFolder))
                             Directory.Delete(bundleFolder, true);
+                        if (!Directory.Exists(Path.Combine("programs", "arduino")))
+                            Directory.CreateDirectory(Path.Combine("programs", "arduino"));
                         Directory.Move(Path.Combine(destFolder, "src"), bundleFolder);
                         reader = new StreamReader(Path.Combine(destFolder, "program.hgx"));
                     }
