@@ -1,21 +1,21 @@
 b280235a6a7a5f09e64e3e3829c1b739  usr/local/bin/homegenie/Raspberry.IO.dll
-1b28fd279564667b952b31cd938f78f0  usr/local/bin/homegenie/W800RF32.dll.mdb
+419892a381ca1d8913123f288a8604f8  usr/local/bin/homegenie/W800RF32.dll.mdb
 00f28cc3f8f48f4b651727127ee521fc  usr/local/bin/homegenie/Raspberry.System.dll
 31afcb8680103af25666f5f356cec1c8  usr/local/bin/homegenie/homegenie_stats.db
-9932620497ac1e3e3047bb8532f1bb97  usr/local/bin/homegenie/MIG.dll
+1fb7851008bf6f2398f341eccd1d4edb  usr/local/bin/homegenie/MIG.dll
 2eba6229dc187425fb8a42b116bbff49  usr/local/bin/homegenie/startup_debug.sh
 bcdc1b8562d8bb3994ba6e643511467a  usr/local/bin/homegenie/CREDITS.TXT
 840ba9adf7531994ad4d26319c80451c  usr/local/bin/homegenie/ExpressionEvaluation.dll
-5703884f26ff3165b262c323b993fae4  usr/local/bin/homegenie/TUIOLib.dll.mdb
+91e6262d7aa092a356409ec399e3e827  usr/local/bin/homegenie/TUIOLib.dll.mdb
 fce6579b9380153aba1e3b7633fe82c7  usr/local/bin/homegenie/Nmqtt.dll
 ed3022822cd3dc3348bb51dc054f1574  usr/local/bin/homegenie/IronPython.dll
 306be1bb39f4e14ed6160036c352a541  usr/local/bin/homegenie/automationgroups.xml
-79791b3453e9d84d1526a96a6c6bdafe  usr/local/bin/homegenie/XTenLib.dll.mdb
+a1b9ad8f9550c406696bd8784716e90f  usr/local/bin/homegenie/XTenLib.dll.mdb
 9ba79ad33b61f23a1e45e7b232fddfaf  usr/local/bin/homegenie/Raspberry.IO.GeneralPurpose.dll.mdb
 0f71c47653734ff5b1b183543f07b16c  usr/local/bin/homegenie/IronRuby.dll
 c5b90a488467718f0e324519987a84e7  usr/local/bin/homegenie/Raspberry.IO.GeneralPurpose.dll
 81c4ba2ba12741ba8d90b8a1434ee702  usr/local/bin/homegenie/Raspberry.IO.InterIntegratedCircuit.dll.mdb
-49ba79755b42c0d59bd432a207aeff1b  usr/local/bin/homegenie/Linux.dll.mdb
+fe2507794afa6c4984092aa6b1a735d4  usr/local/bin/homegenie/Linux.dll.mdb
 2c3ccca395d03e4c1d3ecf810040d0f5  usr/local/bin/homegenie/UPnP.dll
 0d75bd2fca8b58ac2108af550c668610  usr/local/bin/homegenie/programs/71.dll
 2ac14887e57255e45186c946fbba6aa2  usr/local/bin/homegenie/programs/93.dll
@@ -56,7 +56,7 @@ c90f9c739bac831b4e4e91d9014921cd  usr/local/bin/homegenie/programs/63.dll
 5e1241bbd956ab890bf6c69046666ca4  usr/local/bin/homegenie/programs/143.dll
 aa354fce07042c366d389c33f7e6ca24  usr/local/bin/homegenie/programs/60.dll
 c5eb50f7b79a79132795708b5a4636a3  usr/local/bin/homegenie/programs/91.dll
-2c608b0942cb8921c1c749b8985e7a88  usr/local/bin/homegenie/programs/92.dll
+de2e6ff9e1becc7057dd2d997f5fc3d0  usr/local/bin/homegenie/programs/92.dll
 186845755f31876fba21391ee8f0d259  usr/local/bin/homegenie/programs/37.dll
 2b72e90d464cdce703ee42c9f2c6647a  usr/local/bin/homegenie/programs/503.dll
 1f940ed8ebaf0fb71260c72795a39014  usr/local/bin/homegenie/programs/39.dll
@@ -64,37 +64,38 @@ c5eb50f7b79a79132795708b5a4636a3  usr/local/bin/homegenie/programs/91.dll
 4908ebd5ae8aa76069c4cb1b81db84b2  usr/local/bin/homegenie/programs/112.dll
 b2e47bb3c646cf6194102bad3d755f15  usr/local/bin/homegenie/programs/74.dll
 6bb9c032a89e0aaca5f774eddc3891ea  usr/local/bin/homegenie/programs/100.dll
+bcd44321a183c71d33383df6cc9da554  usr/local/bin/homegenie/programs/64.dll
 16bdd2b28fed2671a23358070f905ac7  usr/local/bin/homegenie/programs/35.dll
 8c44a127d1114fff58cccaee711f48d5  usr/local/bin/homegenie/programs/6.dll
 5dc158084d5520617cc94489699da70d  usr/local/bin/homegenie/programs/16.dll
 6e911e0a393f7d7d6f2de035fa4f883b  usr/local/bin/homegenie/Microsoft.Scripting.Metadata.dll
 f9235fe512bd41e42f6283d7a42c00f6  usr/local/bin/homegenie/System.Reactive.Linq.dll
 a0eec0219ff6f383470d235524a3a636  usr/local/bin/homegenie/Raspberry.IO.dll.mdb
-dd7b47a2584e56f7781525b25b4c227f  usr/local/bin/homegenie/XTenLib.dll
+890c3f25781656521b0172e452f673a3  usr/local/bin/homegenie/XTenLib.dll
 0dd334a75a245d02ed9f8811d87130de  usr/local/bin/homegenie/System.Data.SQLite.dll
-84a6b9c12cfbbe1515c9934eeef1f22c  usr/local/bin/homegenie/HomeGenie.exe.mdb
-1601c3741478d47b4d10157eb6deb0e4  usr/local/bin/homegenie/NetClientLib.dll.mdb
+9b4ab2e1129986f62a2182bad3ce437d  usr/local/bin/homegenie/HomeGenie.exe.mdb
+5f8312749ad9f1085ef2bc1019f77494  usr/local/bin/homegenie/NetClientLib.dll.mdb
 198a54b1a3bba2d5300270ea6f1b9cb5  usr/local/bin/homegenie/Common.Logging.dll
-3e813f608889b84a19b7bf64440c00fd  usr/local/bin/homegenie/Common.dll.mdb
+e4f1e0f0f757c14dff4b206fbb626a72  usr/local/bin/homegenie/Common.dll.mdb
 d41c3437d476f2bff5947499f2e61476  usr/local/bin/homegenie/Jint.dll
 37eecbeadf5dca36834120373b107c83  usr/local/bin/homegenie/lircconfig.xml
 eff69039ac32797907dc61dc82da9768  usr/local/bin/homegenie/Raspberry.IO.Components.dll
 5619e5d4b93e544c7b9174c062f6c40b  usr/local/bin/homegenie/Newtonsoft.Json.dll
 26aa2c76b7c6a102291cb3df7b06e2db  usr/local/bin/homegenie/IronPython.Modules.dll
-f1e75a7b1177c7a4e1c46b541587a3e1  usr/local/bin/homegenie/Common.dll
+fe6958beabcfa20504353e61c6f9d4d3  usr/local/bin/homegenie/Common.dll
 9b3d79ec6bcdcb6b058da166dbd359c3  usr/local/bin/homegenie/Common.Logging.Core.dll
 8742ca673f11373aa5b26f966c03ef49  usr/local/bin/homegenie/LICENCE.TXT
 a2e8ed401a63a52bbc5c89696ddf608d  usr/local/bin/homegenie/Raspberry.IO.Interop.dll.mdb
-05cd7d413706cfe14f1438afcbc7df68  usr/local/bin/homegenie/Linux.dll
+effc02897bebc55d913a4b5705189bea  usr/local/bin/homegenie/Linux.dll
 24af8be4dbc490e696255e094a16ae66  usr/local/bin/homegenie/Raspberry.IO.SerialPeripheralInterface.dll.mdb
 c64d5a6317ee3402737c79876891382e  usr/local/bin/homegenie/Raspberry.IO.InterIntegratedCircuit.dll
 4b2e8cdefcdd848a1e4293864093ff7d  usr/local/bin/homegenie/v4l/debian64_libCameraCaptureV4L.so
 6d8594a2978b5070055a4c1ad0d460f5  usr/local/bin/homegenie/v4l/debian64_libCameraCaptureV4L.so.gd3
 9fa7c1e2979434e4fd3eeb8fa259184c  usr/local/bin/homegenie/v4l/raspbian_libCameraCaptureV4L.so
-3770e47ffdc6b50acecc42bb0501eef8  usr/local/bin/homegenie/HISTORY.TXT
-6040dd138ae2b7102544ecb768078921  usr/local/bin/homegenie/ZWaveLib.dll.mdb
-554ccc924d4c97e14d16c874d3038430  usr/local/bin/homegenie/README.TXT
-a08eadf66d674eabe6800fc1255b64ef  usr/local/bin/homegenie/programs.xml
+214b9a5899bbcd919cfdae367cfead40  usr/local/bin/homegenie/HISTORY.TXT
+457703f8372071ac4bc04ce47e02691f  usr/local/bin/homegenie/ZWaveLib.dll.mdb
+1a30b6634b2238506b5fce1be31ed65e  usr/local/bin/homegenie/README.TXT
+d8bfae98f7b9d250db6936092cff414e  usr/local/bin/homegenie/programs.xml
 cd5671fae61c773666d15e6e63abd493  usr/local/bin/homegenie/modules.xml
 ae0fde41ac16130b4ec74a277e3ff754  usr/local/bin/homegenie/NCrontab.dll
 a19a8070a77444aafa96d3fbe033c42e  usr/local/bin/homegenie/IronRuby.Libraries.dll
@@ -780,16 +781,16 @@ c5ddfe5a47768abbd9c99e36a26d20ab  usr/local/bin/homegenie/html/pages/control/wid
 a6571b8b92e6fb11a57a488ce9cea2a2  usr/local/bin/homegenie/html/pages/control/widgets/homegenie/generic/mediaserver.json
 6a9b6a529291887fc027452c87a875a1  usr/local/bin/homegenie/html/pages/control/widgets/homegenie/generic/securitysystem.html
 bdde5d822cde985ea804cbecfb4c55e4  usr/local/bin/homegenie/html/pages/control/widgets/configuration.json
-c201da804c52f84cd7060189caeb32ad  usr/local/bin/homegenie/html/pages/control/widgets/Bounz/Z-Wave.Me/locales/ru.json
-ad8d581af6e888d60fce1edc193bf87e  usr/local/bin/homegenie/html/pages/control/widgets/Bounz/Z-Wave.Me/locales/en.json
+45f4caee2d18c0762691dccb42b5fac1  usr/local/bin/homegenie/html/pages/control/widgets/Bounz/Z-Wave.Me/locales/ru.json
+e79a4dccdf1677c967ce832b184a0e02  usr/local/bin/homegenie/html/pages/control/widgets/Bounz/Z-Wave.Me/locales/en.json
 d62088099cb26e699c3f2f9d1a1ec245  usr/local/bin/homegenie/html/pages/control/widgets/Bounz/Z-Wave.Me/thermostat.html
 bc80ec22aff643b173c031f10ae6355c  usr/local/bin/homegenie/html/pages/control/widgets/Bounz/Z-Wave.Me/thermostat.json
 727164714c8f38707922dd5076356042  usr/local/bin/homegenie/html/pages/control/widgets/DaniMail/fibaro/rgbw.json
 d8e8f57134dc9d6eca29aaba0c55ff6a  usr/local/bin/homegenie/html/pages/control/widgets/DaniMail/fibaro/rgbw.html
-9073103e0c67379f260bf0bc52ca83d4  usr/local/bin/homegenie/html/pages/control/_control.js
+c5ffbeed3566895a40973b63d8e8a5bd  usr/local/bin/homegenie/html/pages/control/_control.js
 801b98c115c416e3e46d6ced63ea9267  usr/local/bin/homegenie/html/pages/events/main.html
 4b9a09fa2bf31176c2c45bdf667a4979  usr/local/bin/homegenie/html/pages/events/_events.js
-714fa3a9be437a5872d7219c007c9471  usr/local/bin/homegenie/html/pages/home.html
+12aed614537073be9c2f749059109b4b  usr/local/bin/homegenie/html/pages/home.html
 dd040faa40f80d852f7467ee5f7179ff  usr/local/bin/homegenie/html/pages/apps/netplay/_slideshow.js
 c183f3b0911dfe4a36a72efb2c8bd621  usr/local/bin/homegenie/html/pages/apps/netplay/slideshow.html
 b840f87c5b2cfbe8fe34c1ae50497498  usr/local/bin/homegenie/html/pages/header.html
@@ -817,7 +818,7 @@ a0d2325625578a96cece788a0d09d9c4  usr/local/bin/homegenie/html/pages/analyze/_st
 cc7aaabfbb63245de25ad7cae1ba5b4b  usr/local/bin/homegenie/html/locales/sv.lingo.json
 c1305aee4e182d8db8eff17c02f4b995  usr/local/bin/homegenie/html/locales/en.lingo.json
 dd406edcfdf73c5ca098049de558964e  usr/local/bin/homegenie/html/locales/nl.json
-cc05d150502914b83f2b24eec00795be  usr/local/bin/homegenie/html/locales/ru.json
+e3fe58d94a356302899b2b6d5b49e72e  usr/local/bin/homegenie/html/locales/ru.json
 aee4825c0d44e86d754335359c5abef7  usr/local/bin/homegenie/html/locales/nl.lingo.json
 48179a68210311ca2199580c04e7abb6  usr/local/bin/homegenie/html/locales/es.lingo.json
 ef430f95dc99e666152b558e2be70413  usr/local/bin/homegenie/html/locales/it.json
@@ -1434,29 +1435,29 @@ cb46f4b49cf13afbda74f67a5e0c26bb  usr/local/bin/homegenie/html/images/protection
 943d65dbb4f5060c32c2da7eaf1e7cbc  usr/local/bin/homegenie/Nmqtt.dll.mdb
 d192944e603f47173a2cdb09f62cea72  usr/local/bin/homegenie/Raspberry.IO.Components.dll.mdb
 a788dc0b6ecbb33038c6351732202351  usr/local/bin/homegenie/startup.sh
-88f3b472a251ffc6f7bef856ad2be18d  usr/local/bin/homegenie/SerialPortLib.dll.mdb
-08ce3cd6eb26bce4905bb0061baf001d  usr/local/bin/homegenie/HomeGenie.exe
-b095103a3b2bbaae2aff0265f74b28a3  usr/local/bin/homegenie/release_info.xml
-99c799092621a79f1c5e90fa0acf1135  usr/local/bin/homegenie/NetClientLib.dll
+8eb40dae92f844803df271b485742da5  usr/local/bin/homegenie/SerialPortLib.dll.mdb
+5b10b818ca4e659ccff58071c1fa9b63  usr/local/bin/homegenie/HomeGenie.exe
+9336c7a2be4403dc0381d1a7d5ee43e2  usr/local/bin/homegenie/release_info.xml
+6cbaac5fe868feced709533d59c27e62  usr/local/bin/homegenie/NetClientLib.dll
 5405413fff79b8d9c747aa900f60f082  usr/local/bin/homegenie/sqlite3.dll
 6719023f2783d3357e9640a06607a8d7  usr/local/bin/homegenie/System.Reactive.Core.dll
 272aa48b0bfd90305c6c27b4f4538566  usr/local/bin/homegenie/scheduler.xml
 fc3c6aaf4689d778345be527a3b86330  usr/local/bin/homegenie/groups.xml
 61b0c6d8eb2c756355d52df2ef6170c6  usr/local/bin/homegenie/Microsoft.Scripting.dll
 1eaaeb4b0ac7c0b87a66425ea072ce50  usr/local/bin/homegenie/System.Reactive.Interfaces.dll
-c5fc6bbab35e5994f5271c4f463d471e  usr/local/bin/homegenie/MIG.dll.mdb
-7aaafc674d38a16bfe0ec6083e16340f  usr/local/bin/homegenie/homegenie_factory_config.zip
+d47a8e70c697e9896d172a492ca9cd75  usr/local/bin/homegenie/MIG.dll.mdb
+aa32a5c95f61c8903c5db7e0550d2f8f  usr/local/bin/homegenie/homegenie_factory_config.zip
 a10fc9aa97ec8123eb53d6cce5205aad  usr/local/bin/homegenie/SoapBox.FluentDwelling.dll
-02f0925efc6f47e76978dee1794e2d6f  usr/local/bin/homegenie/W800RF32.dll
+650815954ef5daf80ad72bdd86a03137  usr/local/bin/homegenie/W800RF32.dll
 43eec548526f3bb1562e3624829fc35a  usr/local/bin/homegenie/LibUsbDotNet.dll
-5ea878de44d4c5db9989f9d3fb9e8dd0  usr/local/bin/homegenie/ZWaveLib.dll
+24624c32cbf4de4e170a0542fdfbf1c1  usr/local/bin/homegenie/ZWaveLib.dll
 9797dd3759e5838a90f919a0a82ea1b4  usr/local/bin/homegenie/System.Reactive.PlatformServices.dll
 3d0d7d82375a1801ab49eef9efa79cfe  usr/local/bin/homegenie/lircremotes.xml
 74f8337df72854f9977eaef57fc7b82a  usr/local/bin/homegenie/SoapBox.FluentDwelling.dll.mdb
 e9b1952bb41d0324f742a131c3e3f9be  usr/local/bin/homegenie/DEVELOPERS.TXT
-4e7e25abbf9313fee2c3e34f58a9eecc  usr/local/bin/homegenie/TUIOLib.dll
+88e19bd10cc61fd047afea1177b620f5  usr/local/bin/homegenie/TUIOLib.dll
 93675a8ef36065d0c64fe1bf4fb79902  usr/local/bin/homegenie/IronRuby.Libraries.Yaml.dll
-4fc18fcf2919cbe31aaeabbd44d98dea  usr/local/bin/homegenie/SerialPortLib.dll
+b49f2ac440fff523d732f160f0ae6071  usr/local/bin/homegenie/SerialPortLib.dll
 c6e281c464c870b7a6889cf912a32655  usr/local/bin/homegenie/systemconfig.xml
 db2adee744b5affe5de6b92725145aa7  usr/local/bin/homegenie/Ude.dll
 45e62f3ec45dca03882e5f749a9cc018  usr/local/bin/homegenie/HomeGenie.exe.config
